# at_user_api

./: .dockerignore  README.md  alembic_upgrade_head.sh  makefile  pyproject.toml
AT_USER/: .dockerignore  alembic.ini  alembic_create_revision.sh  alembic_downgrade_head.sh  at_component.py  makefile  pyproject.toml
AT_USER/docker/at_user_local/: docker-compose.yml
AT_USER/docker/base/: Dockerfile
AT_USER/frontend/: package-lock.json  package.json
AT_USER/frontend/src/: App.js  index.js
AT_USER/src/: application.py  start.sh
AT_USER/src/alembic/: env.py
AT_USER/src/alembic/versions/: 33b3e5ec320d_init.py  5a23db886eab_init.py  7aab9eef0056_database_start.py
AT_USER/src/api/: api.py  auth_router.py  frontend.py
AT_USER/src/config/: postgres.py
AT_USER/src/repository/: interface.py  user.py
AT_USER/src/schema/: user.py
AT_USER/src/service/user/: config.py  user.py
AT_USER/src/store/postgres/: session.py
at_user_api/: __main__.py  application.py  start.sh
at_user_api/api/: auth_router.py
at_user_api/config/: cli_args.py  postgres.py  rabbitmq.py  server.py
at_user_api/delivery/: router.py
at_user_api/providers/: user.py
at_user_api/repository/: interface.py  user.py
at_user_api/schema/: base.py
at_user_api/service/: interface.py
at_user_api/worker/: auth.py  dependencies.py  worker.py
docker/: Dockerfile
docker/at_user_local/: .env.example  docker-compose.yml
local/: .env.example  docker-compose.yml  local.sh
migrations/: alembic.ini  create_revision.sh  downgrade_head.sh  upgrade_head.sh
src/: application.py
(+24 files in other folders)
